# nelius-launcher

./: Cargo.toml  Dioxus.toml  README.md  tailwind.css
.github/workflows/: rust.yml
assets/: main.css  tailwind.css
prototyping/: download_mc.py  nelius_launch.py
src/: downloader.rs  globals.rs  installed_versions.rs  launcher.rs  main.rs  reqwest_client.rs  reqwest_global_client.rs
src/app/: persistent_state.rs
src/components/: game_logs_box.rs  mod.rs  nelius_button.rs  profile_add.rs  profile_details_pane.rs  profile_list_item.rs  profile_list_sidebar.rs  profile_logs_box.rs  profile_management_box.rs  setup_box.rs  version_config.rs  version_details_pane.rs  version_list_item.rs  version_list_sidebar.rs  version_management_box.rs
src/launcher/: api_structures.rs  boot.rs  directories.rs  downloader.rs  instances.rs  logging.rs  mod.rs
src/launcher/requests/: mod.rs  reqwest_global_client.rs
src/model/: helpers.rs  mod.rs  persistent_state.rs  state.rs
src/profiles/: mod.rs  store.rs
src/state/: mod.rs  persistent.rs  state.rs
src/ui/: init.rs  message.rs  mod.rs  update.rs  view.rs
utility/: download_mc.py
