[package]
name = "nelius-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
directories = "6.0.0"
futures = "0.3.31"
iced = { version = "0.14.0", features = ["tokio"] }
reqwest = { version = "0.13.2", features = ["json"]}
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
