[package]
name = "dioxustemplate"
version = "0.1.0"
authors = ["natix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
dioxus = { version = "0.7.1", features = [] }
directories = "6.0.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
zip = "8.1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
